2001-12-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use RTEMS_ENV_RTEMSCPU.

2001-12-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add multilib support.

2001-11-28	Joel Sherrill <joel@OARcorp.com>,

	This was tracked as PR91.
	* rtems/score/cpu.h: Added CPU_PROVIDES_ISR_IS_IN_PROGRESS macro which
	is used to specify if the port uses the standard macro for this (FALSE).
	A TRUE setting indicates the port provides its own implementation.

2001-10-12	Joel Sherrill <joel@OARcorp.com>

	* cpu_asm.S: _CPU_Context_save_fp in was incorrectly in conditional
	compilation block with (CPU_HARDWARE_FP == FALSE).  Reported by
	Wayne Bullaughey <wayne@wmi.com>.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-09-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/score/Makefile.am: Use 'PREINSTALL_FILES ='.
	* Makefile.am: Use 'PREINSTALL_FILES ='.

2001-07-03	Joel Sherrill <joel@OARcorp.com>

	* cpu.c: Fixed typo.

2000-05-24	Joel Sherrill <joel@OARcorp.com>

	* rtems/score/mips.h: Added constants for MIPS exception numbers.
	All exceptions should be given low numbers and thus can be installed
	and processed in a uniform manner.  Variances between various MIPS
	ISA levels were not accounted for.

2001-05-24	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* Assisted in design and debug by Joel Sherrill <joel@OARcorp.com>.
	* cpu_asm.S: Now works on Mongoose-V.  Missed in previous patch.

2001-05-22	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* rtems/score/cpu.h: Add the interrupt stack structure and enhance
	the context initialization to account for floating point tasks.  
	* rtems/score/mips.h: Added the routines mips_set_cause(),
	mips_get_fcr31(), and mips_set_fcr31().
	* Assisted in design and debug by Joel Sherrill <joel@OARcorp.com>.

2001-05-07	Joel Sherrill <joel@OARcorp.com>
